--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons-vue": "^6.0.0",
     "ant-design-vue": "^2.0.0-rc.9",
     "core-js": "^3.6.5",
+    "google-fonts-webpack-plugin": "^0.4.4",
     "vue": "^3.0.0"
   },
   "devDependencies": {
